# deezer-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.toml
deezer_downloader/: consumer.py  downloader.py  filler.py  searcher.py
tests/: test_deezer_downloader.py
