[tool.poetry]
name = "deezer_downloader"
version = "0.1.0"
description = ""
authors = ["Patrick <patrick.pwall@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.12.1"
dynaconf = "^2.2.3"
dataset = "^1.3.1"
youtube-dl = "^2020.3.24"
eyed3 = "^0.9.5"
beautifulsoup4 = "^4.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
